--- a/style/main.css
+++ b/style/main.css
@@ -1,123 +1,10 @@
-/*.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
+body {
+    font-size: 19px;
+    font-family: "cronos-pro", "alegreya", calibri, candara, "segoe UI", Optima, Arial, sans-serif;
+    color: rgb(226, 226, 226);
+    background: rgb(15, 15, 15);
+    background-image: url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2% 6% 6% 6%; /* 使container內縮 */
 }
-
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.iframe-16x9 {
-     position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden; 
-    
-}
-
-.iframe-4x3{
-      position: relative;
-    padding-bottom: 75%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
-}
-
-.iframe-16x9 iframe, .iframe-4x3 iframe {
-  position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.mobile .iframe-16x9 {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden; 
-}
-
-.mobile .iframe-4x3 {
-    position: relative;
-    padding-bottom: 75%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;  
-}
-
-.mobile .iframe-16x9 iframe, .mobile .iframe-4x3 iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;    
-}
-
-h1,h2,h3
-
-h1 {
-    font-size: 3.3684em;
-    line-height: 1.2656em;
-    margin-top: 0.4219em;
-    margin-bottom: 0;
-}
-
-h2 {
-    font-size: 2.2632em;
-    line-height: 1.2558em;
-    margin: 0.4219em auto 0.4219em auto;
-}
-
-h3 {
-    font-size: 1.5263em;
-    font-weight: normal;
-    line-height: 1.8621em;
-    margin-top: 0.9310em;
-    margin-bottom: 0;
-}
-
-.video-container {
-    position: relative;
-    padding-bottom: 50%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
-}
-.video-container iframe,
-.video-container object,
-.video-container embed {
-    position: absolute;
-    top: 0; left: 35px;
-    width: 100%; height: 100%;
-}*/
-
-<style type="text/css">
-.div_table-cell{
-	width:450px; 
-	height:500px;	
-	background-color:#333; 
-	display:table-cell; 
-	text-align:center; 
-	vertical-align:middle;
-	border:solid 2px #fff;	
-	}
- 
-/* IE6 hack */
-.div_table-cell span{
-	height:100%; 
-	display:inline-block;
-	}
- 
-/* 讓table-cell下的所有元素都居中 */
-.div_table-cell *{ vertical-align:middle;}
-</style>
